Remove all chat messages when button is pressed

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
     </div>
-    <div id="chats"></div>
+    <button class="button clear">Clear Messages</button>
+    <div id="chats">
+    </div>
   </body>
 </html>
