Adds room to the page

--- a/client/index.html
+++ b/client/index.html
@@ -16,13 +16,14 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <select id="roomSelect"></select>
+      <form method="POST">
+        <input class="username" type="username" placeholder="Username" required></input>
+        <textarea class="message" placeholder="Message..." required></textarea>
+        <input type="submit" class="button post">
+      </form>
+      <button class="button clear">Clear Messages</button>
     </div>
-    <form method="POST">
-      <input class="username" type="username" placeholder="Username" required></input>
-      <textarea class="message" placeholder="Message..." required></textarea>
-      <input type="submit" class="button post">
-    </form>
-    <button class="button clear">Clear Messages</button>
     <div id="chats">
     </div>
   </body>
