Refactor and add id's to chat classes

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,9 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <select id="roomSelect"></select>
+      <select id="roomSelect">
+        <option value="Main">Main</option>
+      </select>
       <form method="POST">
         <input class="username" type="username" placeholder="Username" required></input>
         <textarea class="message" placeholder="Message..." required></textarea>
