Chat log changes when room is change, posts appear correctly in rooms, stylized interface

--- a/client/index.html
+++ b/client/index.html
@@ -20,11 +20,10 @@
         <option value="Main">Main</option>
       </select>
       <form method="POST">
-        <input class="username" type="username" placeholder="Username" required></input>
-        <textarea class="message" placeholder="Message..." required></textarea>
-        <input type="submit" class="button post">
+        <input class="username" type="username" placeholder="Username" required></input><br></br>
+        <input class="message" type="text" placeholder="Message..." required></input><br></br>
+        <input type="submit" class="button post"> <button class="button clear">Clear Messages</button>
       </form>
-      <button class="button clear">Clear Messages</button>
     </div>
     <div id="chats">
     </div>
