Attempt to get submit to work

--- a/client/index.html
+++ b/client/index.html
@@ -19,10 +19,10 @@
       <select id="roomSelect">
         <option value="Main">Main</option>
       </select>
-      <form method="POST">
+      <form id="send" method="POST">
         <input class="username" type="username" placeholder="Username" required></input><br></br>
-        <input class="message" type="text" placeholder="Message..." required></input><br></br>
-        <input type="submit" class="button post"> <button class="button clear">Clear Messages</button>
+        <input class="message" id="message" type="text" placeholder="Message..." required></input><br></br>
+        <input type="submit" class="button submit"> <button class="button clear">Clear Messages</button>
       </form>
     </div>
     <div id="chats">
