Adds and removes friends, post chats with submit button

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
         <option value="Main">Main</option>
       </select>
       <form id="send" method="POST">
-        <input class="username" type="username" placeholder="Username" required></input><br></br>
+        <!-- <input class="username" type="username" placeholder="Username"></input><br></br> -->
         <input class="message" id="message" type="text" placeholder="Message..." required></input><br></br>
         <input type="submit" class="button submit"> <button class="button clear">Clear Messages</button>
       </form>
