--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,6 +19,7 @@
   <script src="spec/chatterboxSpec.js"></script>
 
   <!-- Source files -->
+  <script src="client/bower_components/underscore/underscore-min.js"></script>
   <script src="client/scripts/app.js"></script>
 
 </head>
