--- a/client/index.html
+++ b/client/index.html
@@ -19,10 +19,10 @@
       <select id="roomSelect">
         <option value="Main">Main</option>
       </select>
-      <form id="send" method="POST">
+      <form action="#" id="send" method="post">
         <!-- <input class="username" type="username" placeholder="Username"></input><br></br> -->
         <input class="message" id="message" type="text" placeholder="Message..." required></input><br></br>
-        <input type="submit" class="button submit"> <button class="button clear">Clear Messages</button>
+        <input type="submit" name="submit" class="submit button"> <button class="button clear">Clear Messages</button>
       </form>
     </div>
     <div id="chats">
